--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A beautiful Jekyll theme for creating resume">
     <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <base href="/">
     <!-- Global CSS -->
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/plugins/bootstrap/css/bootstrap.css" type='text/css'>
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/plugins/bootstrap/css/bootstrap.min.css" type='text/css'>
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/plugins/font-awesome/css/font-awesome.css" type='text/css'>
 
