--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="{{site.baseurl}}/favicon.png">
     <!-- Global CSS -->
-    <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css" type='text/css'>
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/plugins/bootstrap/css/bootstrap.min.css" type='text/css'>
     <!-- Plugins CSS -->
-    <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.css" type='text/css'>
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/plugins/font-awesome/css/font-awesome.css" type='text/css'>
 
     <!-- Theme CSS -->
-    <link rel="stylesheet" id="theme-style" href="/assets/css/{% if site.style %}{{ site.style}}.css{% else %}styles.css{% endif %}" type='text/css'>
+    <link rel="stylesheet" id="theme-style" href="{{site.baseurl}}/assets/css/{% if site.style %}{{ site.style}}.css{% else %}styles.css{% endif %}" type='text/css'>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
