--- a/_includes/extended_abstracts.html
+++ b/_includes/extended_abstracts.html
@@ -6,10 +6,30 @@
     <div class="item">
       <div class="meta">
         <div class="upper-row">
+          <h3 class="title">Polynomial Loops: Termination and Beyond</h3>
+          <div class="time">2021</div>
+        </div><!--//upper-row-->
+        <div class="authors">F. Frohn, M. Hark, and J. Giesl</div>
+        <div class="appeared">
+          17th International Workshop on Termination
+          (WST '21),
+          virtual event.
+        </div>
+      </div><!--//meta-->
+      <div class="details">
+        <ul>
+          <li><a href="https://costa.fdi.ucm.es/wst2021/WST2021_proceedings.pdf">Final Version</a></li>
+        </ul>
+      </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
           <h3 class="title">Complexity Analysis for Bitvector Programs</h3>
           <div class="time">2018</div>
         </div><!--//upper-row-->
-        <div class="authors">Jera Hensel, Florian Frohn and Jürgen Giesl</div>
+        <div class="authors">J. Hensel, F. Frohn, and J. Giesl</div>
         <div class="appeared">
           16th International Workshop on Termination
           (WST '18),
