--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -6,6 +6,60 @@
       <div class="item">
         <div class="meta">
           <div class="upper-row">
+            <h3 class="title">Proving Non-Termination and Lower Runtime Bounds with LoAT (System Description)</h3>
+            <div class="time">2022</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn and J. Giesl</div>
+          <div class="appeared">
+            Under review.
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://arxiv.org/abs/2202.04546">Preliminary Version</a> appeared as arXiv:2202.04546 [cs.LO]</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
+            <h3 class="title">A Calculus for Modular Loop Acceleration and Non-Termination Proofs</h3>
+            <div class="time">2021</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn and C. Fuhs</div>
+          <div class="appeared">
+            Under review.
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://arxiv.org/abs/2111.13952">Preliminary Version</a> appeared as arXiv:2111.13952 [cs.LO]</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
+            <h3 class="title">Termination of Triangular Polynomial Loops</h3>
+            <div class="time">2021</div>
+          </div><!--//upper-row-->
+          <div class="authors">M. Hark, F. Frohn, and J. Giesl</div>
+          <div class="appeared">
+            Under review.
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://arxiv.org/abs/1910.11588">Preliminary Version</a> appeared as arXiv:1910.11588 [cs.LO]</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
             <h3 class="title">Polynomial Loops: Beyond Termination</h3>
             <div class="time">2020</div>
           </div><!--//upper-row-->
@@ -65,7 +119,7 @@
         </div><!--//meta-->
         <div class="details">
           <ul>
-            <li><a href="https://arxiv.org/abs/1910.11588">Extended Version</a> appeared as arXiv:1910.11588 [cs.LO]</li>
+            <li><a href="https://arxiv.org/abs/1910.11588v4">Extended Version</a></li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
