--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,14 +2,12 @@
   <h2 class="section-title"><i class="fa fa-info"></i>About me</h2>
   <div class="summary">
     <p>
-      I am working at <a href="https://www.absint.com/">AbsInt GmbH</a>, where I am contributing to <a href="https://www.absint.com/astree/index_de.htm">Astrée</a>, a program verification tool based on abstract interpretation.
-      Before that, I have been a postdoctoral researcher at the <a href="https://www.mpi-inf.mpg.de/departments/automation-of-logic/">Research Group 1</a> of the <a href="https://www.mpi-inf.mpg.de/home/">Max Planck Institute for Informatics</a> in Saarbrücken
-      and a research and teaching assistant at <a href="http://www-i2.informatik.rwth-aachen.de/lufgi2">Lehr- und Forschungsgebiet Informatik 2</a> at RWTH Aachen,
-      where I successfully defended my <a href="./thesis.pdf">PhD thesis</a> in December 2018.
-      Besides Astrée, I am/have been contributing to several other software projects:
+      I am a research and teaching assistant at <a href="http://www-i2.informatik.rwth-aachen.de/lufgi2">Lehr- und Forschungsgebiet Informatik 2</a> at RWTH Aachen.
+      I am/have been contributing to several other software projects:
       <ul>
-        <li>Our techniques to prove lower runtime-bounds and non-termination of integer programs are implemented in the freely available <a href="https://github.com/aprove-developers/LoAT">Loop Acceleration Tool (LoAT)</a>.</li>
-        <li>I was one of the main developers of the <a href="http://aprove.informatik.rwth-aachen.de/">Automated Program Verification Environment (AProVE)</a> tool.</li>
+        <li>Our techniques to prove lower runtime-bounds and non-termination of integer programs are implemented in the freely available <a href="https://aprove-developers.github.io/LoAT/">Loop Acceleration Tool (LoAT)</a>.</li>
+        <li>I am one of the main developers of the <a href="http://aprove.informatik.rwth-aachen.de/">Automated Program Verification Environment (AProVE)</a>.</li>
+        <li>I was one of the main developers of <a href="https://www.absint.com/astree/index.htm">Astrée</a> from 05/2020 to 03/2022.
         <li>I contributed to <a href="https://github.com/draperlaboratory/Cage-Public">CAGE</a>, a toolchain which uses AProVE and LoAT to find and prove the absence of denial of service attacks in Java programs.
           CAGE is joint work of <a href="http://draper.com/">Draper</a>, the University of Innsbruck, and our research group and was developed within the <a href="https://www.darpa.mil/program/space-time-analysis-for-cybersecurity">DARPA STAC</a> program.
         </li>
@@ -24,12 +22,9 @@
           <li>term rewriting systems</li>
           <li>integer programs</li>
         </ul>
-        <li>abstract interpretation and symbolic evaluation</li>
+        <li>abstract interpretation</li>
         <li>program verification</li>
       </ul>
-    </p>
-    <p>
-      For a rough overview of the topic of my PhD-thesis, have a look at <a href="./poster.pdf">this poster</a> and the corresponding <a href="./abstract_poster.pdf"> extended abstract</a>.
     </p>
   </div><!--//summary-->
 </section><!--//section-->
