--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
   <div class="summary">
     <p>
       I am a research and teaching assistant at <a href="http://www-i2.informatik.rwth-aachen.de/lufgi2">Lehr- und Forschungsgebiet Informatik 2</a> at RWTH Aachen.
-      I am/have been contributing to several other software projects:
+      I am/have been contributing to several software projects:
       <ul>
         <li>Our techniques to prove lower runtime-bounds and non-termination of integer programs are implemented in the freely available <a href="https://aprove-developers.github.io/LoAT/">Loop Acceleration Tool (LoAT)</a>.</li>
         <li>I am one of the main developers of the <a href="http://aprove.informatik.rwth-aachen.de/">Automated Program Verification Environment (AProVE)</a>.</li>
