update of publications

--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -11,12 +11,15 @@
           </div><!--//upper-row-->
           <div class="authors">F. Frohn and J. Giesl</div>
           <div class="appeared">
-            Under review.
+            In Proceedings of the 11th International Joint Conference on Automated Reasoning (IJCAR '22),
+            Haifa, Israel,
+            to appear.
           </div>
         </div><!--//meta-->
         <div class="details">
           <ul>
             <li><a href="https://arxiv.org/abs/2202.04546">Preliminary Version</a> appeared as arXiv:2202.04546 [cs.LO]</li>
+            <li><a href="https://ffrohn.github.io/loat-tool-paper-evaluation">Homepage</a></li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
@@ -35,6 +38,7 @@
         <div class="details">
           <ul>
             <li><a href="https://arxiv.org/abs/2111.13952">Preliminary Version</a> appeared as arXiv:2111.13952 [cs.LO]</li>
+            <li><a href="https://ffrohn.github.io/acceleration-calculus">Homepage</a></li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
