--- a/_includes/education.html
+++ b/_includes/education.html
@@ -1,7 +1,7 @@
 <div class="education-container container-block">
   <h2 class="container-block-title">Education</h2>
   <div class="item">
-    <h4 class="degree"><a href="./poster.pdf">PhD in Computer Science</a></h4>
+    <h4 class="degree"><a href="./poster.pdf">Dr. rer. nat. in Computer Science</a></h4>
     <h5 class="meta">RWTH Aachen University</h5>
     <div class="time">2013 - 2018</div>
   </div><!--//item-->
