--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,6 +20,7 @@
           <ul>
             <li><a href="https://arxiv.org/abs/2202.04546">Preliminary Version</a> appeared as arXiv:2202.04546 [cs.LO]</li>
             <li><a href="https://ffrohn.github.io/loat-tool-paper-evaluation">Homepage</a></li>
+            <li><a href="./slides/ijcar22/slides.html">Slides</a> from talk at IJCAR</li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
