update links to new loat repo

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
       I am a research and teaching assistant at <a href="http://www-i2.informatik.rwth-aachen.de/lufgi2">Lehr- und Forschungsgebiet Informatik 2</a> at RWTH Aachen.
       I am/have been contributing to several software projects:
       <ul>
-        <li>Our techniques to prove lower runtime-bounds and non-termination of integer programs are implemented in the freely available <a href="https://aprove-developers.github.io/LoAT/">Loop Acceleration Tool (LoAT)</a>.</li>
+        <li>Our techniques to prove lower runtime-bounds and non-termination of integer programs are implemented in the freely available <a href="https://loat-developers.github.io/LoAT/">Loop Acceleration Tool (LoAT)</a>.</li>
         <li>I am one of the main developers of the <a href="http://aprove.informatik.rwth-aachen.de/">Automated Program Verification Environment (AProVE)</a>.</li>
         <li>I was one of the main developers of <a href="https://www.absint.com/astree/index.htm">Astrée</a> from 05/2020 to 03/2022.
         <li>I contributed to <a href="https://github.com/draperlaboratory/Cage-Public">CAGE</a>, a toolchain which uses AProVE and LoAT to find and prove the absence of denial of service attacks in Java programs.
