--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -13,14 +13,17 @@
           <div class="appeared">
             In Proceedings of the 11th International Joint Conference on Automated Reasoning (IJCAR '22),
             Haifa, Israel,
-            to appear.
+            Lecture Notes in Artificial Intelligence 13385, pages 712-722.
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
           </div>
         </div><!--//meta-->
         <div class="details">
           <ul>
+            <li><a href="https://doi.org/10.1007/978-3-031-10769-6_41">Final Version</a></li>
             <li><a href="https://arxiv.org/abs/2202.04546">Preliminary Version</a> appeared as arXiv:2202.04546 [cs.LO]</li>
             <li><a href="https://ffrohn.github.io/loat-tool-paper-evaluation">Homepage</a></li>
             <li><a href="./slides/ijcar22/slides.html">Slides</a> from talk at IJCAR</li>
+            <li>DOI 10.1007/978-3-031-10769-6_41</li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
@@ -33,13 +36,16 @@
           </div><!--//upper-row-->
           <div class="authors">F. Frohn and C. Fuhs</div>
           <div class="appeared">
-            Under review.
+            International Journal on Software Tools for Technology Transfer, 24(5)
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
           </div>
         </div><!--//meta-->
         <div class="details">
           <ul>
+            <li><a href="https://doi.org/10.1007/s10009-022-00670-2">Final Version</a></li>
             <li><a href="https://arxiv.org/abs/2111.13952">Preliminary Version</a> appeared as arXiv:2111.13952 [cs.LO]</li>
             <li><a href="https://ffrohn.github.io/acceleration-calculus">Homepage</a></li>
+            <li>DOI 10.1007/s10009-022-00670-2</li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
