--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 
     <!-- Theme CSS -->
     <link rel="stylesheet" id="theme-style" href="{{site.baseurl}}/assets/css/{% if site.style %}{{ site.style}}.css{% else %}styles.css{% endif %}" type='text/css'>
+    <style>ul {text-align: justify;}</style>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
