update extended abstracts

--- a/_includes/extended_abstracts.html
+++ b/_includes/extended_abstracts.html
@@ -6,6 +6,46 @@
     <div class="item">
       <div class="meta">
         <div class="upper-row">
+          <h3 class="title">A Calculus for Modular Non-Termination Proofs by Loop Acceleration</h3>
+          <div class="time">2022</div>
+        </div><!--//upper-row-->
+        <div class="authors">F. Frohn and C. Fuhs</div>
+        <div class="appeared">
+          18th International Workshop on Termination
+          (WST '22),
+          Haifa, Israel.
+        </div>
+      </div><!--//meta-->
+      <div class="details">
+        <ul>
+          <li><a href="https://sws.cs.ru.nl/pmwiki/uploads/Main/wst2022proceedings.pdf">Final Version</a></li>
+        </ul>
+      </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
+          <h3 class="title">Deciding Termination of Uniform Loops with Polynomial Parameterized Complexity</h3>
+          <div class="time">2022</div>
+        </div><!--//upper-row-->
+        <div class="authors">M. Hark, F. Frohn, and J. Giesl</div>
+        <div class="appeared">
+          18th International Workshop on Termination
+          (WST '22),
+          Haifa, Israel.
+        </div>
+      </div><!--//meta-->
+      <div class="details">
+        <ul>
+          <li><a href="https://sws.cs.ru.nl/pmwiki/uploads/Main/wst2022proceedings.pdf">Final Version</a></li>
+        </ul>
+      </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
           <h3 class="title">Polynomial Loops: Termination and Beyond</h3>
           <div class="time">2021</div>
         </div><!--//upper-row-->
