--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -4,7 +4,7 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
-      <h3 class="title">Seminar Verification Techniques</h3>
+      <h3 class="title">Verifikationsverfahren (Verification Techniques)</h3>
       <div class="time">WS 22/23</div>
     </div>
     <div class="upper-row">
