--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -15,10 +15,10 @@
       <h3 class="title">Seminar <a href="http://verify.rwth-aachen.de/seminar/SAT22">Satisfiability Checking</a></h3>
       <div class="time">SS 22</div>
     </div>
-    <div class="upper-row">
-      <h3 class="title">Supervision of 8 Bachelor and 4 Master Theses</h3>
-      <div class="time">WS 13/14 - WS 17/18</div>
-    </div>
+    <!-- <div class="upper-row"> -->
+    <!--   <h3 class="title">Supervision of 8 Bachelor and 4 Master Theses</h3> -->
+    <!--   <div class="time">WS 13/14 - WS 17/18</div> -->
+    <!-- </div> -->
     <div class="upper-row">
       <h3 class="title">Proseminar <a href="http://verify.rwth-aachen.de/proseminar/PK17">Fortgeschrittene Programmierkonzepte (Advanced Programming Concepts)</a></h3>
       <div class="time">SS 17</div>
