--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,6 +4,10 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
+      <h3 class="title">PC-Member of the <a href="https://termination-portal.org/wiki/19th_International_Workshop_on_Termination">19th International Workshop on Termination (WST '23)</a><br/>Obergurgl, Austria</h3>
+      <div class="time">2023</div>
+    </div>
+    <div class="upper-row">
       <h3 class="title">PC-Member of the <a href="https://sws.cs.ru.nl/WST2022">18th International Workshop on Termination (WST '22)</a><br/>Haifa, Israel</h3>
       <div class="time">2022</div>
     </div>
