--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -6,6 +6,45 @@
       <div class="item">
         <div class="meta">
           <div class="upper-row">
+            <h3 class="title">Proving Non-Termination by Acceleration Driven Clause Learning with LoAT</h3>
+            <div class="time">2023</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn and J. Giesl</div>
+          <div class="appeared">
+            under review
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://arxiv.org/abs/2304.10166">Preliminary Version</a> appeared as arXiv:2304.10166 [cs.LO]</li>
+            <li><a href="https://loat-developers.github.io/adcl-nonterm-eval">Homepage</a></li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
+            <h3 class="title">ADCL: Acceleration Driven Clause Learning for Constrained Horn Clauses</h3>
+            <div class="time">2023</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn and J. Giesl</div>
+          <div class="appeared">
+            under review
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://arxiv.org/abs/2303.01827">Preliminary Version</a> appeared as arXiv:2303.01827 [cs.LO]</li>
+            <li><a href="https://loat-developers.github.io/adcl-evaluation">Homepage</a></li>
+            <li><a href="./slides/hcvs23/adcl/slides.html">Slides</a> from talk at HCVS '23</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
             <h3 class="title">Proving Non-Termination and Lower Runtime Bounds with LoAT (System Description)</h3>
             <div class="time">2022</div>
           </div><!--//upper-row-->
