--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -6,18 +6,48 @@
       <div class="item">
         <div class="meta">
           <div class="upper-row">
+            <h3 class="title">From Innermost to Full Almost-Sure Termination of Probabilistic Term Rewriting.</h3>
+            <div class="time">2024</div>
+          </div><!--//upper-row-->
+          <div class="authors">J.-C. Kassing, F. Frohn, and J. Giesl</div>
+          <div class="appeared">
+            In Proceedings of the 27th Conference on Foundations of Software Science and Computation Structures (FoSSaCS '24),
+            Luxembourg City, Luxembourg,
+            Lecture Notes in Computer Science 14575, pages 206-228.
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://doi.org/10.1007/978-3-031-57231-9_10">Final Version</a></li>
+            <li><a href="https://arxiv.org/abs/2310.06121">Preliminary Version</a> appeared as arXiv:2310.06121 [cs.LO]</li>
+            <li><a href="https://aprove-developers.github.io/InnermostToFullAST/">Homepage</a></li>
+            <li>DOI: 10.1007/978-3-031-57231-9_10</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
             <h3 class="title">Proving Non-Termination by Acceleration Driven Clause Learning with LoAT</h3>
             <div class="time">2023</div>
           </div><!--//upper-row-->
           <div class="authors">F. Frohn and J. Giesl</div>
           <div class="appeared">
-            under review
+            In Proceedings of the 29th Conference on Automated Deduction (CADE '23),
+            Rome, Italy,
+            Lecture Notes in Computer Science 14132, pages 220-233.
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
           </div>
         </div><!--//meta-->
         <div class="details">
           <ul>
+            <li><a href="https://doi.org/10.1007/978-3-031-38499-8_13">Final Version</a></li>
             <li><a href="https://arxiv.org/abs/2304.10166">Preliminary Version</a> appeared as arXiv:2304.10166 [cs.LO]</li>
             <li><a href="https://loat-developers.github.io/adcl-nonterm-eval">Homepage</a></li>
+            <li><a href="./slides/cade23/slides.html">Slides</a> from talk at CADE</li>
+            <li>DOI: 10.1007/978-3-031-38499-8_13</li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
@@ -30,14 +60,39 @@
           </div><!--//upper-row-->
           <div class="authors">F. Frohn and J. Giesl</div>
           <div class="appeared">
-            under review
+            In Proceedings of the 30th Static Analysis Symposium (SAS '23),
+            Cascais, Portugal,
+            Lecture Notes in Computer Science 14284, pages 259-285.
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
           </div>
         </div><!--//meta-->
         <div class="details">
           <ul>
+            <li><a href="https://doi.org/10.1007/978-3-031-44245-2_13">Final Version</a></li>
             <li><a href="https://arxiv.org/abs/2303.01827">Preliminary Version</a> appeared as arXiv:2303.01827 [cs.LO]</li>
             <li><a href="https://loat-developers.github.io/adcl-evaluation">Homepage</a></li>
-            <li><a href="./slides/hcvs23/adcl/slides.html">Slides</a> from talk at HCVS '23</li>
+            <li><a href="./slides/sas23/slides.html">Slides</a> from talk at SAS</li>
+            <li>DOI: 10.1007/978-3-031-44245-2_13</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
+            <h3 class="title">Termination of Triangular Polynomial Loops</h3>
+            <div class="time">2023</div>
+          </div><!--//upper-row-->
+          <div class="authors">M. Hark, F. Frohn, and J. Giesl</div>
+          <div class="appeared">
+            Forma Methods in System Design. ©<a href="http://www.springer.com/">Springer-Verlag</a>
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://doi.org/10.1007/s10703-023-00440-z">Final Version</a></li>
+            <li><a href="https://arxiv.org/abs/1910.11588">Preliminary Version</a> appeared as arXiv:1910.11588 [cs.LO]</li>
+            <li>DOI: 10.1007/s10703-023-00440-z
           </ul>
         </div><!--//details-->
       </div><!--//item-->
@@ -85,24 +140,6 @@
             <li><a href="https://arxiv.org/abs/2111.13952">Preliminary Version</a> appeared as arXiv:2111.13952 [cs.LO]</li>
             <li><a href="https://ffrohn.github.io/acceleration-calculus">Homepage</a></li>
             <li>DOI 10.1007/s10009-022-00670-2</li>
-          </ul>
-        </div><!--//details-->
-      </div><!--//item-->
-
-      <div class="item">
-        <div class="meta">
-          <div class="upper-row">
-            <h3 class="title">Termination of Triangular Polynomial Loops</h3>
-            <div class="time">2021</div>
-          </div><!--//upper-row-->
-          <div class="authors">M. Hark, F. Frohn, and J. Giesl</div>
-          <div class="appeared">
-            Under review.
-          </div>
-        </div><!--//meta-->
-        <div class="details">
-          <ul>
-            <li><a href="https://arxiv.org/abs/1910.11588">Preliminary Version</a> appeared as arXiv:1910.11588 [cs.LO]</li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
