--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -85,7 +85,7 @@
           </div><!--//upper-row-->
           <div class="authors">M. Hark, F. Frohn, and J. Giesl</div>
           <div class="appeared">
-            Forma Methods in System Design. ©<a href="http://www.springer.com/">Springer-Verlag</a>
+            Formal Methods in System Design. ©<a href="http://www.springer.com/">Springer-Verlag</a>
           </div>
         </div><!--//meta-->
         <div class="details">
