--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,6 +4,14 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
+      <h3 class="title">Organizer and head of the steering committee of the <a href="https://termination-portal.org/wiki/Termination_Competition">Termination and Complexity Competition (termCOMP)</a></h3>
+      <div class="time">since 2023</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">PC-Member of the <a href="https://www.sci.unich.it/hcvs24/">11th Workshop on Horn Clauses for Verification and Synthesis (HCVS '24)</a><br/>Luxembourg City, Luxembourg</h3>
+      <div class="time">2024</div>
+    </div>
+    <div class="upper-row">
       <h3 class="title">PC-Member of the <a href="https://termination-portal.org/wiki/19th_International_Workshop_on_Termination">19th International Workshop on Termination (WST '23)</a><br/>Obergurgl, Austria</h3>
       <div class="time">2023</div>
     </div>
