--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,7 +4,7 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
-      <h3 class="title">Organizer and head of the steering committee of the <a href="https://termination-portal.org/wiki/Termination_Competition">Termination and Complexity Competition (termCOMP)</a></h3>
+      <h3 class="title">Organizer and head of the Steering Committee of the <a href="https://termination-portal.org/wiki/Termination_Competition">Termination and Complexity Competition (termCOMP)</a></h3>
       <div class="time">since 2023</div>
     </div>
     <div class="upper-row">
@@ -28,7 +28,7 @@
       <div class="time">2020</div>
     </div>
     <div class="upper-row">
-      <h3 class="title">Member of the Steering-Committee of the <a href="http://termination-portal.org/wiki/Termination_Competition">Termination and Complexity Competition (TermComp)</a></h3>
+      <h3 class="title">Member of the Steering Committee of the <a href="http://termination-portal.org/wiki/Termination_Competition">Termination and Complexity Competition (TermComp)</a></h3>
       <div class="time">since 2020</div>
     </div>
     <div class="upper-row">
