update teaching & abstracts

--- a/_includes/extended_abstracts.html
+++ b/_includes/extended_abstracts.html
@@ -6,6 +6,27 @@
     <div class="item">
       <div class="meta">
         <div class="upper-row">
+          <h3 class="title">Proving Non-Termination by Acceleration Driven Clause Learning</h3>
+          <div class="time">2023</div>
+        </div><!--//upper-row-->
+        <div class="authors">F. Frohn and J. Giesl</div>
+        <div class="appeared">
+          19th International Workshop on Termination
+          (WST '23),
+          Obergurgl, Austria.
+        </div>
+      </div><!--//meta-->
+      <div class="details">
+        <ul>
+          <li><a href="https://doi.org/10.48550/arXiv.2307.09839">Final Version</a></li>
+          <li>DOI: 10.48550/arXiv.2307.09839</li>
+        </ul>
+      </div><!--//details-->
+    </div><!--//item-->
+
+    <div class="item">
+      <div class="meta">
+        <div class="upper-row">
           <h3 class="title">A Calculus for Modular Non-Termination Proofs by Loop Acceleration</h3>
           <div class="time">2022</div>
         </div><!--//upper-row-->
