--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -4,6 +4,10 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
+      <h3 class="title">Proseminar <a href="http://verify.rwth-aachen.de/proseminar/PK24">Fortgeschrittene Programmierkonzepte (Advanced Programming Concepts)</a></h3>
+      <div class="time">SS 24</div>
+    </div>
+    <div class="upper-row">
       <h3 class="title">Proseminar <a href="http://verify.rwth-aachen.de/proseminar/PK23">Fortgeschrittene Programmierkonzepte (Advanced Programming Concepts)</a></h3>
       <div class="time">SS 23</div>
     </div>
