--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -6,7 +6,52 @@
       <div class="item">
         <div class="meta">
           <div class="upper-row">
-            <h3 class="title">From Innermost to Full Almost-Sure Termination of Probabilistic Term Rewriting.</h3>
+            <h3 class="title">Integrating Loop Acceleration into Bounded Model Checking</h3>
+            <div class="time">2024</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn and J. Giesl</div>
+          <div class="appeared">
+            In Proceedings of the 26th International Symposium on Formal Methods (FM '24),
+            Milan, Italy,
+            to appear
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://doi.org/10.48550/arXiv.2401.09973">Preliminary Version</a> appeared as arXiv:2401.09973 [cs.LO]</li>
+            <li><a href="https://loat-developers.github.io/abmc-eval/">Homepage</a></li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
+            <h3 class="title">Satisfiability Modulo Exponential Integer Arithmetic</h3>
+            <div class="time">2024</div>
+          </div><!--//upper-row-->
+          <div class="authors">F. Frohn and J. Giesl</div>
+          <div class="appeared">
+            In Proceedings of the 12th International Joint Conference on Automated Reasoning (IJCAR '24),
+            Nancy, France,
+            Lecture Notes in Artificial Intelligence 14739, pages 344-365.
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
+          </div>
+        </div><!--//meta-->
+        <div class="details">
+          <ul>
+            <li><a href="https://doi.org/10.1007/978-3-031-63498-7_21">Final Version</a></li>
+            <li><a href="https://doi.org/10.48550/arXiv.2402.01501">Preliminary Version</a> appeared as arXiv:2402.01501 [cs.LO]</li>
+            <li><a href="https://aprove-developers.github.io/swine-eval">Homepage</a></li>
+            <li>DOI: 10.1007/978-3-031-63498-7_21</li>
+          </ul>
+        </div><!--//details-->
+      </div><!--//item-->
+
+      <div class="item">
+        <div class="meta">
+          <div class="upper-row">
+            <h3 class="title">From Innermost to Full Almost-Sure Termination of Probabilistic Term Rewriting</h3>
             <div class="time">2024</div>
           </div><!--//upper-row-->
           <div class="authors">J.-C. Kassing, F. Frohn, and J. Giesl</div>
