update "about me"

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,11 +2,12 @@
   <h2 class="section-title"><i class="fa fa-info"></i>About me</h2>
   <div class="summary">
     <p>
-      I am a research and teaching assistant at <a href="http://www-i2.informatik.rwth-aachen.de/lufgi2">Lehr- und Forschungsgebiet Informatik 2</a> at RWTH Aachen.
+      I am a tenured lecturer ("Lehrkraft für besondere Aufgaben") in the research group <a href="http://www-i2.informatik.rwth-aachen.de/lufgi2">Programming Languages and Verification</a> at RWTH Aachen.
       I am/have been contributing to several software projects:
       <ul>
-        <li>Our techniques to prove lower runtime-bounds and non-termination of integer programs are implemented in the freely available <a href="https://loat-developers.github.io/LoAT/">Loop Acceleration Tool (LoAT)</a>.</li>
+        <li>Our techniques to prove lower runtime-bounds and non-termination of integer programs as well as (un)satisfiability of CHCs are implemented in the freely available <a href="https://loat-developers.github.io/LoAT/">Loop Acceleration Tool (LoAT)</a>.</li>
         <li>I am one of the main developers of the <a href="http://aprove.informatik.rwth-aachen.de/">Automated Program Verification Environment (AProVE)</a>.</li>
+        <li>Our techniques to solve SMT problems with integer exponentiation are implemented in the freely available tool <a href="https://ffrohn.github.io/swine/">SwInE</a></li>
         <li>I was one of the main developers of <a href="https://www.absint.com/astree/index.htm">Astrée</a> from 05/2020 to 03/2022.
         <li>I contributed to <a href="https://github.com/draperlaboratory/Cage-Public">CAGE</a>, a toolchain which uses AProVE and LoAT to find and prove the absence of denial of service attacks in Java programs.
           CAGE is joint work of <a href="http://draper.com/">Draper</a>, the University of Innsbruck, and our research group and was developed within the <a href="https://www.darpa.mil/program/space-time-analysis-for-cybersecurity">DARPA STAC</a> program.
@@ -16,11 +17,13 @@
     <p>
       My fields of interest include (but are not limited to):
       <ul>
+        <li>satisfiability of CHCs</li>
+        <li>SMT</li>
         <li>automated safety, termination, and complexity analysis of</li>
         <ul>
           <li>imperative programs</li>
           <li>term rewriting systems</li>
-          <li>integer programs</li>
+          <li>transition systems</li>
         </ul>
         <li>abstract interpretation</li>
         <li>program verification</li>
