update publications, missing slides

--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,6 +4,10 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
+      <h3 class="title">PC-Member of the 32st International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS '26)</a><br/>Torino, Italy</h3>
+      <div class="time">2026</div>
+    </div>
+    <div class="upper-row">
       <h3 class="title">Organizer and head of the Steering Committee of the <a href="https://termination-portal.org/wiki/Termination_Competition">Termination and Complexity Competition (termCOMP)</a></h3>
       <div class="time">since 2023</div>
     </div>
