--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -13,13 +13,17 @@
           <div class="appeared">
             In Proceedings of the 26th International Symposium on Formal Methods (FM '24),
             Milan, Italy,
-            to appear
+            Lecture Notes in Artificial Intelligence 14933, pages 73-91.
+            ©<a href="http://www.springer.com/">Springer-Verlag</a>
           </div>
         </div><!--//meta-->
         <div class="details">
           <ul>
+            <li><a href="https://doi.org/10.1007/978-3-031-71162-6_4">Final Version</a></li>
             <li><a href="https://doi.org/10.48550/arXiv.2401.09973">Preliminary Version</a> appeared as arXiv:2401.09973 [cs.LO]</li>
             <li><a href="https://loat-developers.github.io/abmc-eval/">Homepage</a></li>
+            <li><a href="./slides/fm24/main.pdf">Slides</a> from talk at FM</li>
+            <li>DOI: 10.1007/978-3-031-71162-6_4</li>
           </ul>
         </div><!--//details-->
       </div><!--//item-->
@@ -43,6 +47,7 @@
             <li><a href="https://doi.org/10.1007/978-3-031-63498-7_21">Final Version</a></li>
             <li><a href="https://doi.org/10.48550/arXiv.2402.01501">Preliminary Version</a> appeared as arXiv:2402.01501 [cs.LO]</li>
             <li><a href="https://aprove-developers.github.io/swine-eval">Homepage</a></li>
+            <li><a href="./slides/ijcar24/slides.html">Slides</a> from talk at IJCAR</li>
             <li>DOI: 10.1007/978-3-031-63498-7_21</li>
           </ul>
         </div><!--//details-->
