update activities and awards

--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -4,8 +4,16 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
-      <h3 class="title">PC-Member of the 32st International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS '26)</a><br/>Torino, Italy</h3>
+      <h3 class="title">PC-Member of the 32st International Conference on Tools and Algorithms for the Construction and Analysis of Systems (TACAS '26)<br/>Torino, Italy</h3>
       <div class="time">2026</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">PC-Chair of the <a href="https://www.sci.unich.it/hcvs25/"> 12th Workshop on Horn Clauses for Verification and Synthesis (HCVS '25)</a><br/>Zagreb, Croatia</h3>
+      <div class="time">2025</div>
+    </div>
+    <div class="upper-row">
+      <h3 class="title">PC-Member of the <a href="https://smt-workshop.cs.uiowa.edu/2025/">23rd International Workshop on Satisfiability Modulo Theories (SMT '25)</a><br/>Glasgow, UK</h3>
+      <div class="time">2025</div>
     </div>
     <div class="upper-row">
       <h3 class="title">Organizer and head of the Steering Committee of the <a href="https://termination-portal.org/wiki/Termination_Competition">Termination and Complexity Competition (termCOMP)</a></h3>
