--- a/_includes/awards.html
+++ b/_includes/awards.html
@@ -4,6 +4,11 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
+      <h3 class="title"><a href="https://merz.gitlabpages.inria.fr/2024-ijcar/page/awards/">Best paper honourable mention</a> for "Satisfiability Modulo Exponential Integer Arithmetic"</h3>
+      <div class="time">2024</div>
+    </div><!--//upper-row-->
+
+    <div class="upper-row">
       <h3 class="title"><a href="https://etaps.org/2020/afternoon">EASST Award for the best ETAPS paper related to the systematic and rigorous engineering of software and systems</a> for "A Calculus for Modular Loop Acceleration"</h3>
       <div class="time">2020</div>
     </div><!--//upper-row-->
