--- a/_includes/awards.html
+++ b/_includes/awards.html
@@ -4,7 +4,7 @@
     <summary>Show / Hide</summary>
 
     <div class="upper-row">
-      <h3 class="title"><a href="https://merz.gitlabpages.inria.fr/2024-ijcar/page/awards/">Best paper honourable mention</a> for "Satisfiability Modulo Exponential Integer Arithmetic"</h3>
+      <h3 class="title"><a href="https://merz.gitlabpages.inria.fr/2024-ijcar/page/awards/">IJCAR Best paper honourable mention</a> for "Satisfiability Modulo Exponential Integer Arithmetic"</h3>
       <div class="time">2024</div>
     </div><!--//upper-row-->
 
